# memo

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  build.sh
.github/workflows/: sync_mirror.yml
cmake/: fetch_content.cmake  fetch_content_cli11.cmake  fetch_content_cxxaux.cmake  fetch_content_doctest.cmake  fetch_content_googletest.cmake  fetch_content_spdlog.cmake  fetch_content_yamlcpp.cmake  fetch_content_yyjson.cmake
etc/: memo.yaml
include/: config_model.h
src/: CMakeLists.txt  config_loader.cpp  executor.cpp  memo.cpp  memo.h
tests/: CMakeLists.txt
tests/googletest/: CMakeLists.txt  googletest.cpp
